kubernetes/manifestos/3-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: servico-aplicacao-idwall
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
#  - name: https
#    port: 443
#    protocol: TCP
#    targetPort: 3000
  selector:
    name: aplicacao-idwall
