kubernetes/manifestos/4-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-idwall
spec:
#  tls:
#    - secretName: tls-certificate
#      hosts:
#        - idwaller.devops.sp
  rules:
  - host: idwaller.devops.sp
    http:
      paths:
      - path: /
        backend:
          serviceName: servico-aplicacao-idwall
          servicePort: 80
